--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -1,59 +1,25 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Login Page</title>
+</head>
+<body>
+    <h2>Login Page</h2>
+    <form method="POST" action="/login">
+        Username:<br>
+        <input type="text" name="username">
+        <br>
+        Password:<br>
+        <input type="password" name="password">
+        <br><br>
+        <input type="submit" value="Login">
+    </form>
+    <br>
+    <a href="/forgot-password">Forgot Password?</a>
+    <br>
+    <a href="/forgot-username">Forgot Username?</a>
+    <br>
+    <a href="/signup">Sign Up</a>
+</body>
+</html>
 
-<html> 
-
-<head> 
-
-    <title>Login Form</title> 
-
-    <link rel="stylesheet" type="text/css" href="css/style.css"> 
-
-</head> 
-
-<body> 
-
-    <h2>Login Page</h2><br> 
-
-    <div class="login"> 
-
-    <form id="login" method="get" action="login.php"> 
-
-        <label><b>User Name 
-
-        </b> 
-
-        </label> 
-
-        <input type="text" name="Uname" id="Uname" placeholder="Username"> 
-
-        <br><br> 
-
-        <label><b>Password 
-
-        </b> 
-
-        </label> 
-
-        <input type="Password" name="Pass" id="Pass" placeholder="Password"> 
-
-        <br><br> 
-
-        <input type="button" name="log" id="log" value="Log In Here"> 
-
-        <br><br> 
-
-        <input type="checkbox" id="check"> 
-
-        <span>Remember me</span> 
-
-        <br><br> 
-
-        Forgot <a href="#">Password</a> 
-
-    </form> 
-
-</div> 
-
-</body> 
-
-</html> 
