--- a/FrontEnd/Deep(HCI)/dashboard.html
+++ b/FrontEnd/Deep(HCI)/dashboard.html
@@ -17,7 +17,7 @@
         body {
             font-family: 'Roboto', sans-serif;
             font-size: 1rem;
-            background-color: #FAF9F6;
+            background-color: #000022;
         }
 
         .navbar {
@@ -33,7 +33,7 @@
 
         .navbar-toggler {
             margin-left: auto;
-            color: rgb(59, 105, 170);
+            color: #0094C6;
         }
 
         .navbar-toggler-icon {
@@ -48,7 +48,7 @@
 
         .nav-link {
             font-size: 1.2rem;
-            color: black;
+            color: #BDDDE7;
             padding: 10px;
             position: relative;
         }
@@ -58,7 +58,7 @@
             display: block;
             width: 0;
             height: 2px;
-            background: linear-gradient(to right, #007bff, #4b0082, #8a2be2);
+            background: linear-gradient(to left, #BDDDE7, #0094C6, #001242);
             position: absolute;
             bottom: -5px;
             left: 0;
@@ -155,7 +155,7 @@
         }
 
         .widget {
-            background-color: #fff;
+            background-color: #BDDDE7;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
