--- a/FrontEnd/Deep(HCI)/dashboard.html
+++ b/FrontEnd/Deep(HCI)/dashboard.html
@@ -512,6 +512,26 @@
                 </div>
             </div>
         </div>
+        <!-- Delete Confirmation Modal -->
+        <div class="modal fade" id="deleteConfirmationModal" tabindex="-1" role="dialog" aria-labelledby="deleteConfirmationModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="deleteConfirmationModalLabel">Confirm Deletion</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        Are you sure you want to delete this device?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-danger" id="confirmDelete">Delete</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Statistics tab content -->
@@ -608,6 +628,7 @@
           <p><strong>Category:</strong> ${device.category}</p>
           <p><strong>Status:</strong> ${device.status}</p>
           <button class="btn btn-primary" onclick="toggleDeviceStatus(${index})">Turn ${device.status === 'off' ? 'On' : 'Off'}</button>
+          <button class="btn btn-danger" data-toggle="modal" data-target="#deleteConfirmationModal">Delete</button>
         </div>
       </div>
     `;
@@ -621,6 +642,25 @@
     window.onresize = function () {
         renderDevices();
     };
+
+    $(document).ready(function() {
+        // This variable will hold the reference to the device card that is pending deletion.
+        let currentDeviceCard = null;
+
+        // Bind the click event using event delegation
+        $(document).on('click', '.btn-danger', function() {
+            // This finds the closest parent device-card of the clicked delete button.
+            currentDeviceCard = $(this).closest('.device-card');
+        });
+
+        // Event listener for the confirm delete button in the modal
+        $('#confirmDelete').click(function() {
+            if (currentDeviceCard) {
+                currentDeviceCard.remove();  // Remove the device card from the DOM
+                $('#deleteConfirmationModal').modal('hide');  // Hide the confirmation modal
+            }
+        });
+    });
 </script>
 
 <script>
