--- a/FrontEnd/Deep(HCI)/registration.html
+++ b/FrontEnd/Deep(HCI)/registration.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="registration.css">
+
     <style>
         body {
             background-color: #F0EEE6;
