--- a/FrontEnd/Deep(HCI)/dashboard.html
+++ b/FrontEnd/Deep(HCI)/dashboard.html
@@ -441,12 +441,25 @@
                 <div class="modal-body">
                     <form id="deviceForm">
                         <div class="form-group">
+                            <label for="deviceId">Device ID</label>
+                            <input type="text" class="form-control" id="deviceId" placeholder="Enter Device ID" required>
+                        </div>
+                        <div class="form-group">
                             <label for="deviceName">Device Name</label>
                             <input type="text" class="form-control" id="deviceName" required>
                         </div>
                         <div class="form-group">
                             <label for="deviceCategory">Device Category</label>
-                            <input type="text" class="form-control" id="deviceCategory" required>
+                            <select class="form-control" id="deviceCategory" onchange="showTemperatureField(this.value)">
+                                <option value="">Select a Category</option>
+                                <option value="Lights">Lights</option>
+                                <option value="Security">Security</option>
+                                <option value="HVAC">HVAC</option>
+                            </select>
+                        </div>
+                        <div class="form-group" id="temperatureField" style="display:none;">
+                            <label for="deviceTemperature">Temperature</label>
+                            <input type="number" class="form-control" id="deviceTemperature" placeholder="Enter Temperature">
                         </div>
                     </form>
                 </div>
@@ -679,6 +692,17 @@
     updateTime();
     setInterval(updateTime, 1000);
 
+</script>
+
+<script>
+    function showTemperatureField(value) {
+        var temperatureField = document.getElementById('temperatureField');
+        if (value === 'HVAC') {
+            temperatureField.style.display = 'block';
+        } else {
+            temperatureField.style.display = 'none';
+        }
+    }
 </script>
 
 </body>
