--- a/FrontEnd/Deep(HCI)/login.html
+++ b/FrontEnd/Deep(HCI)/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
-            background-color: #F0EEE6;
+            background-color: #000022;
             color: #000000;
             font-family: Arial, sans-serif;
             display: flex;
@@ -21,7 +21,7 @@
             width: 350px;
             padding: 20px;
             border-radius: 10px;
-            background-color: #ffffff;
+            background-color: #BDDDE7;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             animation: fadeInUp 0.6s ease forwards;
         }
@@ -41,7 +41,7 @@
             padding: 10px;
             width: 100px;
             font-weight: bold;
-            background-color: #3498db;
+            background-color: #0094C6;
             border: none;
             color: #ffffff;
         }
