--- a/FrontEnd/Deep(HCI)/forgotpassword.html
+++ b/FrontEnd/Deep(HCI)/forgotpassword.html
@@ -107,7 +107,7 @@
         <p id="message">A link to reset your password will be sent to your email. Please follow the instructions provided in the email.</p>
     </div>
     <div class="help-block mt-2">
-        <span class="tp mb-5 mt-10"><a href="/login.html" style="color: #0000006a;">Back to Login</a></span>
+        <span class="tp mb-5 mt-10"><a href="login.html" style="color: #0000006a;">Back to Login</a></span>
     </div>
 </div>
 
