--- a/FrontEnd/Deep(HCI)/login.html
+++ b/FrontEnd/Deep(HCI)/login.html
@@ -116,8 +116,9 @@
         </div>
     </form>
     <div class="help-block mt-4">
-        <a href="/forgotpassword.html" class="help-link">Forgot Password?</a>
-        <a href="/signup.html" class="help-link">Don't have an account? Sign up</a>
+        <a href="forgotpassword.html" class="help-link">Forgot Password?</a>
+        <a href="signup.html" class="help-link">Don't have an account? Sign up</a>
+
     </div>
     <!-- Additional links -->
     <div class="help-block mt-2"> <!-- Added margin-top -->
