--- a/FrontEnd/Deep(HCI)/login.html
+++ b/FrontEnd/Deep(HCI)/login.html
@@ -130,19 +130,20 @@
     <div id="errorMessage" class="error-message"></div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 <script>
     $(document).ready(function () {
         $('#loginForm').submit(function (e) {
+            console.log('hi');
             e.preventDefault();
             var username = $('#username').val();
             var password = $('#password').val();
             $.ajax({
                 type: 'POST',
-                url: 'http://localhost:8080/login',
+                url: 'login.go',
                 contentType: 'application/json',
                 data: JSON.stringify({ username: username, password: password }),
                 success: function (response) {
