fixed colors, and fixed file locations

--- a/FrontEnd/dashboard.html
+++ b/FrontEnd/dashboard.html
@@ -17,7 +17,7 @@
         body {
             font-family: 'Roboto', sans-serif;
             font-size: 1rem;
-            background-color: #000022;
+            background-color: #cfcfcd;
         }
 
         .navbar {
@@ -48,7 +48,7 @@
 
         .nav-link {
             font-size: 1.2rem;
-            color: #BDDDE7;
+            color: #393939;
             padding: 10px;
             position: relative;
         }
@@ -58,7 +58,7 @@
             display: block;
             width: 0;
             height: 2px;
-            background: linear-gradient(to left, #BDDDE7, #0094C6, #001242);
+            background: linear-gradient(to left, #d9d9d9, #0094C6, #393939);
             position: absolute;
             bottom: -5px;
             left: 0;
@@ -82,7 +82,7 @@
         }
 
         .widget {
-            background-color: #fff;
+            background-color: #d9d9d9;
             padding: 20px;
             margin-bottom: 20px;
             border-radius: 10px;
@@ -90,7 +90,7 @@
         }
 
         .device-card {
-            background-color: #fff;
+            background-color:   #d9d9d9;
             padding: 20px;
             margin-bottom: 20px;
             border-radius: 10px;
@@ -116,7 +116,7 @@
         }
 
         #account-info {
-            background-color: #fff;
+            background-color: #d9d9d9;
             padding: 20px;
             margin-bottom: 20px;
             border-radius: 10px;
@@ -155,7 +155,7 @@
         }
 
         .widget {
-            background-color: #BDDDE7;
+            background-color: #d9d9d9;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -267,7 +267,7 @@
 <nav class="navbar navbar-expand-lg mt-2">
     <div class="container">
         <a class="navbar-brand" href="#">
-            <img src="ha.png" alt="Logo" height="35">
+            <img src="images/ha.png" alt="Logo" height="35">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
