--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -1,55 +1,166 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <title>Login Page</title>
-  
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
-        
+        body {
+            background-color: #cfcfcd;
+            color: #000000;
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
         .container {
-            max-width: 400px;
-            margin-top: 50px;
-            padding: 15px;
-            border: 1px solid #cccccc;
+            width: 350px;
+            padding: 20px;
             border-radius: 10px;
+            background-color: #d9d9d9;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            animation: fadeInUp 0.6s ease forwards;
         }
+
         .form-group {
-            margin-bottom: 15px;
+            margin-bottom: 20px;
         }
+
         .form-control {
-            margin-bottom: 10px;
+            border-radius: 20px;
+            background-color: #edf2f7;
+            color: #000000;
         }
+
         .btn-primary {
-            width: 100%;
+            border-radius: 20px;
+            padding: 10px;
+            width: 100px;
+            font-weight: bold;
+            background-color: #3498db;
+            border: none;
+            color: #ffffff;
         }
+
+        .btn-primary:hover {
+            background-color: #2980b9;
+        }
+
         .help-block {
             text-align: center;
             margin-top: 20px;
+            color: #6c757d;
+            font-size: 12px;
+        }
+
+        .help-link {
+            display: block;
+            text-decoration: none;
+            color: #000000;
+            margin-bottom: 10px;
+        }
+
+        .tp {
+            color: #0000006a;
+            margin-bottom: 10px;
+            text-decoration: none;
+        }
+
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .error-message {
+            color: red;
+            text-align: center;
+            margin-top: 10px;
         }
     </style>
 </head>
+
 <body>
 
 <div class="container">
-    <h2 class="text-center">Login Page</h2>
-    <form method="POST" action="/login">
+    <div class="text-center">
+        <img src="images/ha.png" alt="Image" class="img-fluid mb-4 mx-auto " style="max-width: 100px;">
+    </div>
+
+    <form id="loginForm">
         <div class="form-group">
             <label for="username">Username:</label>
-            <input type="text" class="form-control" id="username" name="username">
+            <input type="text" class="form-control" id="username" name="username" placeholder="Enter your username">
         </div>
         <div class="form-group">
             <label for="password">Password:</label>
-            <input type="password" class="form-control" id="password" name="password">
+            <input type="password" class="form-control" id="password" name="password"
+                   placeholder="Enter your password">
+            <div class="help-block mb-2">
+                <p style="color: #6c757d; font-size: 10px;">Password must be at least 8 characters long and contain
+                    one uppercase letter.</p>
+            </div>
         </div>
-        <button type="submit" class="btn btn-primary">Login</button>
+        <div class="text-center mb-2">
+            <button type="submit" class="btn btn-primary">Login</button>
+        </div>
     </form>
-    <div class="help-block">
-        <a href="/forgot-password">Forgot Password?</a> | <a href="/forgot-username">Forgot Username?</a> | <a href="/signup">Sign Up</a>
+    <div class="help-block mt-4">
+        <a href="forgotpassword.html" class="help-link">Forgot Password?</a>
+        <a href="signup.html" class="help-link">Don't have an account? Sign up</a>
+
     </div>
+    <!-- Additional links -->
+    <div class="help-block mt-2"> <!-- Added margin-top -->
+        <span class="tp mb-5 mt-10"><a href="/terms" style="color: #0000006a;">Terms of Use</a> | <a href="/PrivacyPolicy.html"
+                                                                                                     style="color: #0000006a;">Privacy Policy</a></span>
+    </div>
+
+    <!-- Error message container -->
+    <div id="errorMessage" class="error-message"></div>
 </div>
-    
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+<script>
+    $(document).ready(function () {
+        $('#loginForm').submit(function (e) {
+            console.log('hi');
+            e.preventDefault();
+            var username = $('#username').val();
+            var password = $('#password').val();
+            $.ajax({
+                type: 'POST',
+                url: 'login.go',
+                contentType: 'application/json',
+                data: JSON.stringify({ username: username, password: password }),
+                success: function (response) {
+                    localStorage.setItem('token', response.token);
+                    window.location.href = '/dashboard.html';
+                },
+                error: function (xhr, status, error) {
+                    if (xhr.status == 401) {
+                        $('#errorMessage').text('Invalid username or password.');
+                    } else {
+                        $('#errorMessage').text('An error occurred while processing your request.');
+                    }
+                }
+            });
+        });
+    });
+</script>
 </body>
+
 </html>
