--- a/FrontEnd/signup.html
+++ b/FrontEnd/signup.html
@@ -4,36 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Sign Up</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
-            background-color: #000022;
+            background-color: #cfcfcd;
             color: #000000;
             font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
         }
 
         .container {
             width: 350px;
-            padding: 20px;
+            padding: 40px 20px;
             border-radius: 10px;
-            background-color: #BDDDE7;
+            background-color: #d9d9d9;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             animation: fadeInUp 0.6s ease forwards;
+            margin: 50px auto;
         }
 
         .form-group {
             margin-bottom: 20px;
+            text-align: center;
         }
 
         .form-control {
             border-radius: 20px;
             background-color: #edf2f7;
             color: #000000;
+            text-align: center;
+            margin: 0 auto;
         }
 
         .btn-primary {
@@ -41,7 +41,7 @@
             padding: 10px;
             width: 100px;
             font-weight: bold;
-            background-color: #0094C6;
+            background-color: #3498db;
             border: none;
             color: #ffffff;
         }
@@ -81,12 +81,6 @@
                 transform: translateY(0);
             }
         }
-
-        .error-message {
-            color: red;
-            text-align: center;
-            margin-top: 10px;
-        }
     </style>
 </head>
 
@@ -94,73 +88,56 @@
 
 <div class="container">
     <div class="text-center">
-        <img src="ha.png" alt="Image" class="img-fluid mb-4 mx-auto " style="max-width: 100px;">
+        <img src="images/ha.png" alt="Image" class="img-fluid mb-4 mx-auto " style="max-width: 100px;">
     </div>
 
-    <form id="loginForm">
+    <form method="POST" action="/signup">
         <div class="form-group">
-            <label for="username">Username:</label>
+            <label for="fullname">Full Name</label>
+            <input type="text" class="form-control" id="fullname" name="fullname" placeholder="Enter your full name">
+        </div>
+        <div class="form-group">
+            <label for="username">Username</label>
             <input type="text" class="form-control" id="username" name="username" placeholder="Enter your username">
         </div>
         <div class="form-group">
-            <label for="password">Password:</label>
+            <label for="email">Email</label>
+            <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email">
+        </div>
+        <div class="form-group">
+            <label for="phonenumber">Phone Number</label>
+            <input type="tel" class="form-control" id="phonenumber" name="phonenumber" placeholder="Enter your phone number">
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
             <input type="password" class="form-control" id="password" name="password"
                    placeholder="Enter your password">
+        </div>
+        <div class="form-group">
+            <label for="confirmpassword">Confirm Password</label>
+            <input type="password" class="form-control" id="confirmpassword" name="confirmpassword"
+                   placeholder="Confirm your password">
             <div class="help-block mb-2">
                 <p style="color: #6c757d; font-size: 10px;">Password must be at least 8 characters long and contain
                     one uppercase letter.</p>
             </div>
         </div>
         <div class="text-center mb-2">
-            <button type="submit" class="btn btn-primary">Login</button>
+            <button type="submit" class="btn btn-primary">Sign Up</button>
         </div>
     </form>
     <div class="help-block mt-4">
-        <a href="forgotpassword.html" class="help-link">Forgot Password?</a>
-        <a href="signup.html" class="help-link">Don't have an account? Sign up</a>
-
+        <a href="/login.html" class="help-link">Already have an account? Login</a>
     </div>
-    <!-- Additional links -->
-    <div class="help-block mt-2"> <!-- Added margin-top -->
-        <span class="tp mb-5 mt-10"><a href="/terms" style="color: #0000006a;">Terms of Use</a> | <a href="/PrivacyPolicy.html"
+    <div class="help-block mt-2">
+        <span class="tp mb-5 mt-10"><a href="/terms" style="color: #0000006a;">Terms of Use</a> | <a href="/privacy-policy"
                                                                                                      style="color: #0000006a;">Privacy Policy</a></span>
     </div>
-
-    <!-- Error message container -->
-    <div id="errorMessage" class="error-message"></div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-<script>
-    $(document).ready(function () {
-        $('#loginForm').submit(function (e) {
-            console.log('hi');
-            e.preventDefault();
-            var username = $('#username').val();
-            var password = $('#password').val();
-            $.ajax({
-                type: 'POST',
-                url: 'login.go',
-                contentType: 'application/json',
-                data: JSON.stringify({ username: username, password: password }),
-                success: function (response) {
-                    localStorage.setItem('token', response.token);
-                    window.location.href = '/dashboard.html';
-                },
-                error: function (xhr, status, error) {
-                    if (xhr.status == 401) {
-                        $('#errorMessage').text('Invalid username or password.');
-                    } else {
-                        $('#errorMessage').text('An error occurred while processing your request.');
-                    }
-                }
-            });
-        });
-    });
-</script>
 </body>
 
 </html>
