--- a/FrontEnd/forgotpassword.html
+++ b/FrontEnd/forgotpassword.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
-            background-color: #FAF9F6;
+            background-color: #cfcfcd;
             color: #000000;
             font-family: Arial, sans-serif;
             display: flex;
@@ -22,7 +22,7 @@
             width: 350px;
             padding: 40px 20px;
             border-radius: 10px;
-            background-color: #ffffff;
+            background-color: #d9d9d9;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             animation: fadeInUp 0.6s ease forwards;
             margin-top: 50px;
@@ -91,7 +91,7 @@
 
 <div class="container">
     <div class="text-center">
-        <img src="ha.png" alt="Image" class="img-fluid mb-4 mx-auto " style="max-width: 100px;">
+        <img src="images/ha.png" alt="Image" class="img-fluid mb-4 mx-auto " style="max-width: 100px;">
     </div>
 
     <form id="forgotPasswordForm" method="POST" action="/forgotpassword">
