--- a/FrontEnd/ExtraFileDONTDELETE/index.html
+++ b/FrontEnd/ExtraFileDONTDELETE/index.html
@@ -198,7 +198,7 @@
             max-height: 80vh; /* Adjust based on your preference, vh units help it to be responsive */
         }
         .carousel-inner img {
-            width: 100%; /* Make images responsive */
+            width: 100%; /* Make static responsive */
             height: auto; /* Maintain aspect ratio */
         }
         .device-group {
